[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/FPS.gd" type="Script" id=1]
[ext_resource path="res://Images/inio_asano.png" type="Texture" id=2]
[ext_resource path="res://Images/TalkIndicator.png" type="Texture" id=3]

[sub_resource type="CapsuleShape" id=10]
radius = 0.5

[sub_resource type="SphereShape" id=11]
radius = 0.5

[sub_resource type="QuadMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
params_billboard_mode = 2
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
albedo_color = Color( 1, 1, 1, 0.0196078 )
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )
size = Vector2( 0.02, 0.02 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
albedo_color = Color( 1, 1, 1, 0.337255 )
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=7]
material = SubResource( 6 )
size = Vector2( 0.02, 0.02 )

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 140.0
margin_top = 143.0
margin_right = 180.0
margin_bottom = 157.0

[node name="StandCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -2.82131e-07, -1, 0, 1, -2.82131e-07, 0, 1, 0 )
shape = SubResource( 10 )

[node name="CrouchCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -2.82131e-07, -1, 0, 1, -2.82131e-07, 0, 0.5, 0 )
visible = false
shape = SubResource( 11 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.06524, 0 )
visible = false
light_color = Color( 0.133333, 0.133333, 0.329412, 1 )
light_energy = 5.157
omni_range = 1.5

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50182, 0 )

[node name="RayCast" type="RayCast" parent="Head"]
enabled = true
cast_to = Vector3( 0, 0, -3 )
collision_mask = 4

[node name="Camera" type="Camera" parent="Head"]
far = 8192.0

[node name="HoldPosition" type="Spatial" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.226989, -0.164761, -0.42435 )

[node name="RayCast" type="RayCast" parent="Head/HoldPosition"]
transform = Transform( 1, 0, 0, 0, -0.908129, 0.418691, 0, -0.418691, -0.908129, 0, 5.96046e-08, 0 )
cast_to = Vector3( 0, 0, 1 )

[node name="InteractIndecator" type="MeshInstance" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.299739 )
mesh = SubResource( 5 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="Head/InteractIndecator"]
mesh = SubResource( 7 )
skeleton = NodePath("../../..")
material/0 = null
